--- a/MakeUsChallenge/app/src/main/res/values/strings.xml
+++ b/MakeUsChallenge/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="check_your_id">Check Your ID</string>
+    <string name="password">Password</string>
 </resources>
